--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "start": "node server.js"
   },
   "author": "Vinay JOshi",
@@ -18,5 +18,8 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.0",
     "validator": "^7.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
