--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "start": "node server.js"
   },
   "author": "Vinay JOshi",
@@ -18,5 +18,15 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.0",
     "validator": "^7.0.0"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "gulp": "^3.9.1",
+    "gulp-jscs": "^4.0.0",
+    "gulp-jshint": "^2.0.4",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
   }
 }
