--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-if": "^2.0.2",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-print": "^2.0.1",
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
