--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-print": "^2.0.1",
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
