--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
+    "gulp-bg": "0.0.8",
     "gulp-if": "^2.0.2",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
